[tool.poetry]
name = "directors"
version = "0.1.0"
description = ""
authors = ["lyutvs <lyutvs@gmail.com>", "mun-jeong-min <>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
zenrows = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
